# package-sanskrit

./: CMakeLists.txt  README.md  build-ctan-dist.sh  introtoskt.ps  introtoskt.skt  introtoskt.tex  skt  skt.c  sktdoc.ps  sktdoc.skt  sktdoc.tex
.github/workflows/: macos.yml  ubuntu.yml
